--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="manifest" href="./manifest.webmanifest">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="shortcut icon" href="./img/clock.png" type="image/png">
-    <meta name="theme_color" content="#000000">
+    <meta name="theme-color" content="#000000">
     <title>Big Clock</title>
 </head>
 <body>
