--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <title>Big Clock</title>
 </head>
 <body>
+    <noscript>Javascript must be enabled for this page to load.</noscript>
     <h1 class="clock" id="js-output"></h1>
 
     <script src="./js/app.js"></script>
